CONT-000: Fixed a alignment bug on contribution filter.

--- a/web/themes/custom/contribtracker/scss/components/_form-contribution-filter.scss
+++ b/web/themes/custom/contribtracker/scss/components/_form-contribution-filter.scss
@@ -94,6 +94,14 @@
       width: 88%;
     }
   }
+
+  .js-form-item-field-contribution-date-value-max {
+    label {
+      @include breakpoint($desktop) {
+        margin-left: 22px;
+      }
+    }
+  }
 }
 
 .contributions__event {
